# colo-manage-tools

./: .gitignore  CMakeLists.txt  README.md
colo_daemon/: colo1  colo_daemon.cpp  testd
config/: default_config.yaml  default_domain.yaml  domain.yaml  save.yaml
include/: Serializer.hpp  buttonrpc.hpp  colod.h  colod_server.h  colod_service.h  config.h  config_parser.h  domain.h  qemu_command.h  runvm.h  shell_command.h  zmq.hpp
scripts/: colod.sh
src/: colod.cpp  main.cpp
src/utils/: CMakeLists.txt  Makefile  cmake_install.cmake  colod_server.cpp  colod_service.cpp  colod_utils.cpp  config_parser.cpp  domain.cpp  qemu_command.cpp  runvm.cpp  shell_command.cpp  utils.cpp
